recipes/argo-cd/argo-cd/9.5.15/CATALOG.md
<!-- Generated by npm run catalog:maps. Do not edit by hand. -->

# argo-cd/argo-cd 9.5.15 Catalog Map

This page makes the artifact chain explicit:

```text
chart -> recipe -> variants -> variant revisions -> package bases -> receipts
```

## Status

| Field | Value |
| --- | --- |
| Chart | argo-cd/argo-cd@9.5.15 |
| Catalog status | catalog-supported |
| Support level | supported-for-declared-scopes |
| Supported scopes | local-test |
| Production readiness | production-review-ready |
| Supported variants | default, no-crds |
| Candidate variants | none |
| Control points | capability-profile, cluster-rbac, crd-policy, dependency-lock, gitops-handoff, hook-generated-secret, hook-policy, installer-support-object, source-lock, stateful-workload, tpl |

## Feature And Proof Summary

This is the chart-level summary. Use the variant table and receipt links below
for exact base-variant evidence.

| Field | Value |
| --- | --- |
| Adoption bucket | try-from-public-catalog |
| User status | catalog-supported-with-live-evidence |
| Strongest evidence | live-helm-vs-confighub-parity |
| Proof lanes | render parity 2/2; ConfigHub 2/2; local live 1/2; GitOps live 2/2; live parity 2/2 |
| Feature summary | crds;extension-slots;remote-dependencies |
| Hard gap | ha (curated proof lane - bespoke teaching needed) |
| Next action | image policy decision recorded for a target scope; create digest-pinned bases or overrides for stricter scopes |

## Artifact Chain

| Stage | Artifact |
| --- | --- |
| Source chart lock | [recipes/argo-cd/argo-cd/9.5.15/source-lock.yaml](source-lock.yaml) |
| Dependency lock | [recipes/argo-cd/argo-cd/9.5.15/dependency-lock.yaml](dependency-lock.yaml) |
| Recipe | [recipes/argo-cd/argo-cd/9.5.15/recipe.yaml](recipe.yaml) |
| Helm plan | [recipes/argo-cd/argo-cd/9.5.15/helm-plan.yaml](helm-plan.yaml) |
| Chart dossier | [recipes/argo-cd/argo-cd/9.5.15/chart-dossier.yaml](chart-dossier.yaml) |
| Control points | [recipes/argo-cd/argo-cd/9.5.15/control-points.yaml](control-points.yaml) |
| Value model | [recipes/argo-cd/argo-cd/9.5.15/value-model.yaml](value-model.yaml) |
| Weirdness and mitigations | [recipes/argo-cd/argo-cd/9.5.15/weirdness-and-mitigations.md](weirdness-and-mitigations.md) |
| Catalog status | [recipes/argo-cd/argo-cd/9.5.15/catalog-status.yaml](catalog-status.yaml) |
| Helm pain report | [recipes/argo-cd/argo-cd/9.5.15/helm-pain-report.yaml](helm-pain-report.yaml) |
| Installer package OCI | `oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/argo-cd-argo-cd:9.5.15@sha256:3404bc0aed621a447aa76cd3e07f28a7f9bfd4d1a8da1385352852386643e665` |
| Installer package source | [packages/argo-cd/argo-cd/9.5.15](../../../../packages/argo-cd/argo-cd/9.5.15) |
| Installer package receipt | [recipes/argo-cd/argo-cd/9.5.15/publication/installer-package-receipt.yaml](publication/installer-package-receipt.yaml) |
| Machine index | [recipes/argo-cd/argo-cd/9.5.15/artifact-index.yaml](artifact-index.yaml) |

## Variants

| Variant | Variant file | Package base | Revision | Helm objects | cub installer objects | Match | Helm equivalence | Scan | Gate | Target facts |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| default | [recipes/argo-cd/argo-cd/9.5.15/variants/default/variant.yaml](variants/default/variant.yaml) | [packages/argo-cd/argo-cd/9.5.15/bases/default](../../../../packages/argo-cd/argo-cd/9.5.15/bases/default) | [recipes/argo-cd/argo-cd/9.5.15/revisions/default/r001/variant-revision.yaml](revisions/default/r001/variant-revision.yaml) | 49 | 50 | 49/49 | pass | warn | warn | required Secret argocd/argocd-redis keys auth |
| no-crds | [recipes/argo-cd/argo-cd/9.5.15/variants/no-crds/variant.yaml](variants/no-crds/variant.yaml) | [packages/argo-cd/argo-cd/9.5.15/bases/no-crds](../../../../packages/argo-cd/argo-cd/9.5.15/bases/no-crds) | [recipes/argo-cd/argo-cd/9.5.15/revisions/no-crds/r001/variant-revision.yaml](revisions/no-crds/r001/variant-revision.yaml) | 46 | 47 | 46/46 | pass | warn | warn | required Secret argocd/argocd-redis keys auth; required CRD applications.argoproj.io; required CRD applicationsets.argoproj.io; required CRD appprojects.argoproj.io |

## Package Bases

| Base | Path | Default | Description |
| --- | --- | --- | --- |
| default | [packages/argo-cd/argo-cd/9.5.15/bases/default](../../../../packages/argo-cd/argo-cd/9.5.15/bases/default) | yes | argo-cd default variant rendered from argo-cd/argo-cd@9.5.15 |
| no-crds | [packages/argo-cd/argo-cd/9.5.15/bases/no-crds](../../../../packages/argo-cd/argo-cd/9.5.15/bases/no-crds) | no | argo-cd CRDs disabled variant rendered from argo-cd/argo-cd@9.5.15 |

## Receipts

| Variant | Revision | Receipt | Kind | Result | Path |
| --- | --- | --- | --- | --- | --- |
| default | r001 | render | RenderReceipt | recorded | [recipes/argo-cd/argo-cd/9.5.15/revisions/default/r001/receipts/render-receipt.yaml](revisions/default/r001/receipts/render-receipt.yaml) |
| default | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/argo-cd/argo-cd/9.5.15/revisions/default/r001/receipts/helm-equivalence-receipt.yaml](revisions/default/r001/receipts/helm-equivalence-receipt.yaml) |
| default | r001 | scan | ScanReceipt | warn | [recipes/argo-cd/argo-cd/9.5.15/revisions/default/r001/receipts/scan-receipt.yaml](revisions/default/r001/receipts/scan-receipt.yaml) |
| default | r001 | installGate | InstallGate | warn | [recipes/argo-cd/argo-cd/9.5.15/revisions/default/r001/receipts/install-gate.yaml](revisions/default/r001/receipts/install-gate.yaml) |
| no-crds | r001 | render | RenderReceipt | recorded | [recipes/argo-cd/argo-cd/9.5.15/revisions/no-crds/r001/receipts/render-receipt.yaml](revisions/no-crds/r001/receipts/render-receipt.yaml) |
| no-crds | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/argo-cd/argo-cd/9.5.15/revisions/no-crds/r001/receipts/helm-equivalence-receipt.yaml](revisions/no-crds/r001/receipts/helm-equivalence-receipt.yaml) |
| no-crds | r001 | scan | ScanReceipt | warn | [recipes/argo-cd/argo-cd/9.5.15/revisions/no-crds/r001/receipts/scan-receipt.yaml](revisions/no-crds/r001/receipts/scan-receipt.yaml) |
| no-crds | r001 | installGate | InstallGate | warn | [recipes/argo-cd/argo-cd/9.5.15/revisions/no-crds/r001/receipts/install-gate.yaml](revisions/no-crds/r001/receipts/install-gate.yaml) |

## Current Install Shape

```sh
cub installer setup --pull oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/argo-cd-argo-cd:9.5.15@sha256:3404bc0aed621a447aa76cd3e07f28a7f9bfd4d1a8da1385352852386643e665 --base <variant> --work-dir <tmp> --non-interactive --namespace <namespace>
```

Use the variant table above to choose the package base. The `oci://` ref is
the public package users pull; the `packages/...` path is the repo source path
used by maintainers and proof scripts. The proof path compares regular Helm
output with real `cub installer setup` output and explains every intentional
difference, such as the Namespace support object or separated Secrets.
