recipes/argo-cd/argo-cd/9.5.17/CATALOG.md
<!-- Generated by npm run catalog:maps. Do not edit by hand. -->

# argo-cd/argo-cd 9.5.17 Catalog Map

This page makes the artifact chain explicit:

```text
chart -> recipe -> variants -> variant revisions -> package bases -> receipts
```

## Status

| Field | Value |
| --- | --- |
| Chart | argo-cd/argo-cd@9.5.17 |
| Catalog status | catalog-candidate |
| Support level | promotion-review-needed |
| Supported scopes | none |
| Production readiness | not-reviewed-for-production |
| Supported variants | none |
| Candidate variants | default, no-crds |
| Control points | capability-profile, cluster-rbac, crd-policy, dependency-lock, gitops-handoff, hook-generated-secret, hook-policy, installer-support-object, source-lock, stateful-workload, tpl |

## Feature And Proof Summary

This is the chart-level summary. Use the variant table and receipt links below
for exact base-variant evidence.

| Field | Value |
| --- | --- |
| Adoption bucket | - |
| User status | - |
| Strongest evidence | - |
| Proof lanes | render parity 2/2; ConfigHub 1/2; local live 2/2; GitOps live 1/2; live parity 1/2 |
| Feature summary | none-recorded |
| Hard gap | - |
| Next action | - |

## Artifact Chain

| Stage | Artifact |
| --- | --- |
| Source chart lock | [recipes/argo-cd/argo-cd/9.5.17/source-lock.yaml](source-lock.yaml) |
| Dependency lock | [recipes/argo-cd/argo-cd/9.5.17/dependency-lock.yaml](dependency-lock.yaml) |
| Recipe | [recipes/argo-cd/argo-cd/9.5.17/recipe.yaml](recipe.yaml) |
| Helm plan | [recipes/argo-cd/argo-cd/9.5.17/helm-plan.yaml](helm-plan.yaml) |
| Chart dossier | [recipes/argo-cd/argo-cd/9.5.17/chart-dossier.yaml](chart-dossier.yaml) |
| Control points | [recipes/argo-cd/argo-cd/9.5.17/control-points.yaml](control-points.yaml) |
| Value model | [recipes/argo-cd/argo-cd/9.5.17/value-model.yaml](value-model.yaml) |
| GitOps runtime review | [recipes/argo-cd/argo-cd/9.5.17/gitops-runtime-review.yaml](gitops-runtime-review.yaml) |
| Catalog status | [recipes/argo-cd/argo-cd/9.5.17/catalog-status.yaml](catalog-status.yaml) |
| Helm pain report | [recipes/argo-cd/argo-cd/9.5.17/helm-pain-report.yaml](helm-pain-report.yaml) |
| Installer package OCI | `oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/argo-cd-argo-cd:9.5.17@sha256:e32948e407f2003dd6a97ba3d6a0e362514bca13c51cbb16b7338c570fdde40f` |
| Installer package source | [packages/argo-cd/argo-cd/9.5.17](../../../../packages/argo-cd/argo-cd/9.5.17) |
| Installer package receipt | [recipes/argo-cd/argo-cd/9.5.17/publication/installer-package-receipt.yaml](publication/installer-package-receipt.yaml) |
| Machine index | [recipes/argo-cd/argo-cd/9.5.17/artifact-index.yaml](artifact-index.yaml) |

## Variants

| Variant | Variant file | Package base | Revision | Helm objects | cub installer objects | Match | Helm equivalence | Scan | Gate | Target facts |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| default | [recipes/argo-cd/argo-cd/9.5.17/variants/default/variant.yaml](variants/default/variant.yaml) | [packages/argo-cd/argo-cd/9.5.17/bases/default](../../../../packages/argo-cd/argo-cd/9.5.17/bases/default) | [recipes/argo-cd/argo-cd/9.5.17/revisions/default/r001/variant-revision.yaml](revisions/default/r001/variant-revision.yaml) | 49 | 50 | 49/49 | pass | warn | warn | required Secret argocd/argocd-redis keys auth |
| no-crds | [recipes/argo-cd/argo-cd/9.5.17/variants/no-crds/variant.yaml](variants/no-crds/variant.yaml) | [packages/argo-cd/argo-cd/9.5.17/bases/no-crds](../../../../packages/argo-cd/argo-cd/9.5.17/bases/no-crds) | [recipes/argo-cd/argo-cd/9.5.17/revisions/no-crds/r001/variant-revision.yaml](revisions/no-crds/r001/variant-revision.yaml) | 46 | 47 | 46/46 | pass | warn | warn | required Secret argocd/argocd-redis keys auth; required CRD applications.argoproj.io; required CRD applicationsets.argoproj.io; required CRD appprojects.argoproj.io |

## Package Bases

| Base | Path | Default | Description |
| --- | --- | --- | --- |
| default | [packages/argo-cd/argo-cd/9.5.17/bases/default](../../../../packages/argo-cd/argo-cd/9.5.17/bases/default) | yes | argo-cd default variant rendered from argo-cd/argo-cd@9.5.17 |
| no-crds | [packages/argo-cd/argo-cd/9.5.17/bases/no-crds](../../../../packages/argo-cd/argo-cd/9.5.17/bases/no-crds) | no | argo-cd CRDs disabled variant rendered from argo-cd/argo-cd@9.5.17 |

## Receipts

| Variant | Revision | Receipt | Kind | Result | Path |
| --- | --- | --- | --- | --- | --- |
| default | r001 | render | RenderReceipt | recorded | [recipes/argo-cd/argo-cd/9.5.17/revisions/default/r001/receipts/render-receipt.yaml](revisions/default/r001/receipts/render-receipt.yaml) |
| default | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/argo-cd/argo-cd/9.5.17/revisions/default/r001/receipts/helm-equivalence-receipt.yaml](revisions/default/r001/receipts/helm-equivalence-receipt.yaml) |
| default | r001 | scan | ScanReceipt | warn | [recipes/argo-cd/argo-cd/9.5.17/revisions/default/r001/receipts/scan-receipt.yaml](revisions/default/r001/receipts/scan-receipt.yaml) |
| default | r001 | installGate | InstallGate | warn | [recipes/argo-cd/argo-cd/9.5.17/revisions/default/r001/receipts/install-gate.yaml](revisions/default/r001/receipts/install-gate.yaml) |
| no-crds | r001 | render | RenderReceipt | recorded | [recipes/argo-cd/argo-cd/9.5.17/revisions/no-crds/r001/receipts/render-receipt.yaml](revisions/no-crds/r001/receipts/render-receipt.yaml) |
| no-crds | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/argo-cd/argo-cd/9.5.17/revisions/no-crds/r001/receipts/helm-equivalence-receipt.yaml](revisions/no-crds/r001/receipts/helm-equivalence-receipt.yaml) |
| no-crds | r001 | scan | ScanReceipt | warn | [recipes/argo-cd/argo-cd/9.5.17/revisions/no-crds/r001/receipts/scan-receipt.yaml](revisions/no-crds/r001/receipts/scan-receipt.yaml) |
| no-crds | r001 | installGate | InstallGate | warn | [recipes/argo-cd/argo-cd/9.5.17/revisions/no-crds/r001/receipts/install-gate.yaml](revisions/no-crds/r001/receipts/install-gate.yaml) |

## Current Install Shape

```sh
cub installer setup --pull oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/argo-cd-argo-cd:9.5.17@sha256:e32948e407f2003dd6a97ba3d6a0e362514bca13c51cbb16b7338c570fdde40f --base <variant> --work-dir <tmp> --non-interactive --namespace <namespace>
```

Use the variant table above to choose the package base. The `oci://` ref is
the public package users pull; the `packages/...` path is the repo source path
used by maintainers and proof scripts. The proof path compares regular Helm
output with real `cub installer setup` output and explains every intentional
difference, such as the Namespace support object or separated Secrets.
